--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,4 +10,10 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
-      
+
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+      # - run: npm ci
+      # - run: npm test
