--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,5 +15,9 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
-      # - run: npm ci
-      # - run: npm test
+      - name: Install Dependencies
+        run: yarn install
+      
+      - name: lint
+        run: yarn lint
+   
