--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v3
 
-      - uses: actions/checkout@v4
+      - name: setup node.js
       - uses: actions/setup-node@v4
         with:
           node-version: 20
