--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,3 +15,5 @@ jobs:
           node-version: 20
       - name: Install Dependencies
         run: yarn install 
+      - name: Run Lint
+        run: yarn lint 
