--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,8 +10,7 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
-      - name: install node
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v3
         with:
           node-version: 20
       - name: Install Dependencies
