--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,4 +33,4 @@ jobs:
         with:
           context: .
           push: false
-          # tags: user/app:latest
+          tags: sandersonck/webapp:latest
