--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,9 @@ jobs:
           node-version: 20
       - name: Install Dependencies
         run: yarn install
+      - name: Install Dependencies
+        run: yarn test
+
       - name: Run Lint
         run: yarn lint
 
