--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,14 +10,16 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
+
       - uses: actions/setup-node@v4
         with:
           node-version: 20
+
       - name: Install Dependencies
         run: yarn install
 
-      - name: test
-        run: yarn test
+      # - name: test
+      - run: yarn test
 
       - name: Run Lint
         run: yarn lint
