--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,8 +18,8 @@ jobs:
       - name: Install Dependencies
         run: yarn install
 
-      # # - name: test
-      # - run: yarn test
+      - name: test
+      - run: yarn test
 
       - name: Run Lint
         run: yarn lint
