--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
         run: yarn install
 
       - name: test
-      - run: yarn test
+        run: yarn test
 
       - name: Run Lint
         run: yarn lint
