--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,8 @@ jobs:
 
       - name: Install Dependencies
         run: yarn install
-
+      - name: tests
+        run: yarn install
       - name: Run Lint
         run: yarn lint
 
