--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,8 +17,9 @@ jobs:
 
       - name: Install Dependencies
         run: yarn install
+
       - name: tests
-        run: yarn install
+        run: yarn test
       - name: Run Lint
         run: yarn lint
 
