--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,8 +18,9 @@ jobs:
       - name: Install Dependencies
         run: yarn install
 
-      - name: tests
-        run: yarn test
+      # - name: tests
+      #   run: yarn test
+
       - name: Run Lint
         run: yarn lint
 
